[package]
name = "simple_machine_id"
version = "0.1.0"
edition = "2021"

[dependencies]
libc = "0.2.155"
litcrypt = "0.3.0"
md5 = "0.7.0"



[target.'cfg(target_os="macos")'.dependencies]
IOKit-sys = { version="0.1.5" }
mach = { version="0.3.2" }
CoreFoundation-sys = { version="0.1.4" }


[target.'cfg(target_os="windows")'.dependencies]
registry = { git="https://github.com/benrussell/registry-rs.git", version = "1.2.3" }



[lib]
#crate-type = ["staticlib"]
# use the simple_link-rs project to package multi crates into one static lib



[build-dependencies]
cbindgen = "0.26.0"
